--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "connect-livereload": "^0.5.2",
     "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
