--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
+    "gulp-handlebars": "^3.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
+    "gulp-wrap": "^0.5.0",
     "main-bower-files": "^2.4.1"
   }
 }
