--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
     "gulp-handlebars": "^3.0.1",
+    "gulp-less": "^2.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
     "gulp-wrap": "^0.5.0",
