--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
     "gulp-handlebars": "^3.0.1",
+    "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^3.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
     "gulp-wrap": "^0.5.0",
+    "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.4.1"
   }
 }
