--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CodeMash 2014 - how to do frontend with gulp.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/testem/testem.js -l PhantomJS"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "serve-static": "^1.7.1"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
     "connect-livereload": "^0.5.2",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
@@ -34,6 +35,9 @@
     "gulp-uglify": "^1.0.2",
     "gulp-wrap": "^0.5.0",
     "jshint-stylish": "^1.0.0",
-    "main-bower-files": "^2.4.1"
+    "main-bower-files": "^2.4.1",
+    "mocha": "^2.1.0",
+    "sinon": "^1.12.2",
+    "testem": "^0.6.24"
   }
 }
