--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "serve-static": "^1.7.1"
   },
   "devDependencies": {
+    "browserify": "^8.0.3",
     "chai": "^1.10.0",
     "connect-livereload": "^0.5.2",
     "gulp": "^3.8.10",
-    "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
     "gulp-handlebars": "^3.0.1",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^3.0.2",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
     "gulp-wrap": "^0.5.0",
@@ -38,6 +39,7 @@
     "main-bower-files": "^2.4.1",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
-    "testem": "^0.6.24"
+    "testem": "^0.6.24",
+    "vinyl-transform": "^1.0.0"
   }
 }
