--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browserify": "^8.0.3",
     "chai": "^1.10.0",
     "connect-livereload": "^0.5.2",
+    "glob": "^4.4.0",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
     "gulp-handlebars": "^3.0.1",
@@ -34,12 +35,17 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.3",
     "gulp-wrap": "^0.5.0",
     "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.4.1",
+    "map-stream": "0.0.5",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
     "testem": "^0.6.24",
-    "vinyl-transform": "^1.0.0"
+    "underscore": "^1.7.0",
+    "vinyl-source-stream": "^1.0.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^2.3.0"
   }
 }
