--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-livereload": "^3.0.2",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.3",
     "gulp-wrap": "^0.5.0",
